--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,57 @@
-<h1 class="text-primary"> Bootstrap </h1>
+<div class="container">
+  <div class="row">
+    <div class="col-3 sidebar">
+      
+      
+      <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark sidebar" style="width: 280px;">
+        
+        <hr>
+      <ul class="nav nav-pills flex-column mb-auto">
+        <li class="nav-item">
+          <a href="#" class="nav-link active" aria-current="page">
+            <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"></use></svg>
+            Home
+          </a>
+        </li>
+        <li>
+          <a href="#" class="nav-link text-white">
+            <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"></use></svg>
+            Dashboard
+          </a>
+        </li>
+        <li>
+          <a href="#" class="nav-link text-white">
+            <svg class="bi me-2" width="16" height="16"><use xlink:href="#table"></use></svg>
+            Orders
+          </a>
+        </li>
+        <li>
+          <a href="#" class="nav-link text-white">
+            <svg class="bi me-2" width="16" height="16"><use xlink:href="#grid"></use></svg>
+            Products
+          </a>
+        </li>
+        <li>
+          <a href="#" class="nav-link text-white">
+            <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"></use></svg>
+            Customers
+          </a>
+        </li>
+      </ul>
+      <hr>
+        
+      </div>
+
+
+    </div>
+    <div class="col-9">
+
+      <div class="list-group">
+        
+        <button type="button" class="list-group-item list-group-item-action">Dapibus ac facilisis in</button>
+        
+      </div>
+
+    </div>
+  </div>
+</div>
