--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,7 +48,13 @@
 
       <div class="list-group">
         
-        <button type="button" class="list-group-item list-group-item-action">Dapibus ac facilisis in</button>
+        <button
+          type="button" 
+          class="list-group-item list-group-item-action"
+          *ngFor="let item of emojis | keyvalue"
+        >
+        {{item.key}}:{{item.value}}
+        </button>
         
       </div>
 
