--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,9 +11,9 @@
         <button
           type="button" 
           class="list-group-item list-group-item-action"
-          *ngFor="let item of emojis | keyvalue"
+          *ngFor="let item of emojis"
         >
-        {{item.key}}:{{item.value}}
+        {{item.name}}:{{item.url}}
         </button>
         
       </div>
