Добавлены иконки звезды и креста в строке

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,3 +7,15 @@
     width: auto;
     height: auto;
 }
+
+.icon:hover :first-child{
+    display: none;
+}
+
+.icon:hover :last-child{
+    display: block;
+}
+
+.hoverIcon{
+    display: none;
+}
