Добавлено удаление и добавление в любимые emoji

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,11 @@
 .emojiImg{
+    background: white;
     width: 25px;
     height: 25px;
 }
 
 .emojiImg:hover{
+    position: absolute;
     width: auto;
     height: auto;
 }
