--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,48 +1,60 @@
-  <div class="row">
-    <div class="col-3 sidebar">
-        <app-sidebar></app-sidebar>
-    </div>
-    <div class="col-9">
-      <div class="list-group ">
-        <div  class="list-group-item list-group-item-action active">
-          <div class="row">
-            <div class="col-8"><h1>Все</h1></div>            
-            <div class="col-4">
-              <input class="form-control form-control " type="text" placeholder="искать...">
-            </div>
+<div class="row">
+  <div class="col-2">
+    <app-sidebar></app-sidebar>
+  </div>
+
+  <div class="col-8">
+    <div class="list-group emojiTable">
+      <div class="list-group-item list-group-item-action active">
+        <div class="row">
+          <div class="col-8">
+            <h1>Все</h1>
+          </div>
+          <div class="col-4">
+            <input class="form-control form-control " type="text" placeholder="искать...">
           </div>
         </div>
-        <div  class="list-group-item">
-          <div class="row">
-            <div class="col-3"><h5>имя</h5></div>
-            <div class="col-6"><h5>ссылка</h5></div>
-            <div class="col-1">превью</div>
-            <div class="col-2">действия</div>
+      </div>
+      <div class="list-group-item">
+        <div class="row">
+          <div class="col-3">
+            <h5>имя</h5>
+          </div>
+          <div class="col-6">
+            <h5>ссылка</h5>
+          </div>
+          <div class="col-1">
+            <h5>превью</h5>
+          </div>
+          <div class="col-2">
+            <h5>действия</h5>
           </div>
         </div>
-        <div
-        class="list-group-item-action list-group-item "
-        *ngFor="let item of emojis; index as i"
-        >
+      </div>
+      <div class="overflow-auto">
+        <div class="list-group-item-action list-group-item" *ngFor="let item of emojis; index as i">
           <div class="row">
             <div class="col-3">{{item.name}}</div>
             <div class="col-6">{{item.url}}</div>
-            <div class="col-1"><img  [src]="item.url" alt="" class="emojiImg"></div>
+            <div class="col-1"><img [src]="item.url" alt="" class="emojiImg"></div>
             <div class="icon col-1" (click)="makeFavorite(item)">
-              <svg *ngIf="!item.isFavorite" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-star " viewBox="0 0 16 16">
-                <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z"/>
-              </svg>   
-              <svg *ngIf="item.isFavorite" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
-                <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+              <svg *ngIf="!item.isFavorite" xmlns="http://www.w3.org/2000/svg" width="25" height="25"
+                fill="currentColor" class="bi bi-star " viewBox="0 0 16 16">
+                <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z" />
+              </svg>
+              <svg *ngIf="item.isFavorite" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                class="bi bi-star-fill" viewBox="0 0 16 16">
+                <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
               </svg>
             </div>
             <div class="icon col-1" (click)="delete(i)">
-              <svg *ngIf="!item.isDeleted" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-x-circle" viewBox="0 0 16 16">
-                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
-              </svg> 
-              <svg *ngIf="item.isDeleted" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-x-circle-fill" viewBox="0 0 16 16">
-                <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z"/>
+              <svg *ngIf="!item.isDeleted" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                class="bi bi-x-circle" viewBox="0 0 16 16">                
+                <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z" />
+              </svg>
+              <svg *ngIf="item.isDeleted" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                class="bi bi-x-circle-fill" viewBox="0 0 16 16">
+                <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z" />
               </svg>
             </div>
           </div>
@@ -50,3 +62,4 @@
       </div>
     </div>
   </div>
+</div>
