--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -1,3 +1,8 @@
 .sidebar{
     min-height: 100vh;
+    max-width: 100%;
+}
+
+:not(.active) .nav-link:hover{
+    background-color: rgb(83, 83, 83);
 }
