--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
     <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark sidebar" style="width: 200px;">
         <hr>
         <ul class="nav nav-pills flex-column mb-auto">
-            <li class="nav-item " *ngFor="let category of categories" >
+            <li class="nav-item " *ngFor="let category of categories" (click)="showCategory(category)">
                 <a class="nav-link text-white" aria-current="page" [class.active]="category.active"> 
                     {{category.name}}
                 </a>
