список sidebar задается теперь в родительском элементе

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <div class="row">
   <div class="col-2">
-    <app-sidebar></app-sidebar>
+    <app-sidebar [categories]="categories"
+                  [emojiTable]="emojiTable"
+                  (newItemEvent)="addItem($event)"></app-sidebar>
   </div>
 
   <div class="col-8">
