--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,15 @@
 <div class="row">
   <div class="col-2">
     <app-sidebar [categories]="categories"
-                  [emojiTable]="emojiTable"
+                  
                   (newItemEvent)="addItem($event)"></app-sidebar>
   </div>
 
   <div class="col-8">
-    <app-emoji-table></app-emoji-table>
+    <app-emoji-table
+                    [itemsPerPage]="itemsPerPage"
+                    [collectionSize]="collectionSize"
+                    [emojis]="emojis"
+                    (newItemEvent)="loadPage($event)"></app-emoji-table>
   </div>
 </div>
