Заголовок таблицы изменяется при выборе категории

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
 
   <div class="col-8">
     <app-emoji-table
+                    [header]="headerTable"
                     [itemsPerPage]="itemsPerPage"
                     [collectionSize]="collectionSize"
                     [emojis]="emojis"
