--- a/src/app/emoji-table/emoji-table.component.html
+++ b/src/app/emoji-table/emoji-table.component.html
@@ -2,7 +2,7 @@
     <div class="list-group-item list-group-item-action active">
         <div class="row">
             <div class="col-8">
-                <h1>Все</h1>
+                <h1>{{header}}</h1>
             </div>
             <div class="col-4">
                 <input class="form-control form-control " type="text" placeholder="искать...">
