--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" (window:beforeunload)="saveLists()">
   <div class="col-2">
     <app-sidebar [categories]="categories"
                   
