исправлено отображение удаленных emoji

--- a/src/app/emoji-table/emoji-table.component.html
+++ b/src/app/emoji-table/emoji-table.component.html
@@ -27,7 +27,8 @@
     </div>
     <div class="overflow-auto">
         <div *ngFor="let item of emojis; index as i">
-            <div class="list-group-item-action list-group-item" *ngIf="!item.isDeleted" >
+            
+            <div class="list-group-item-action list-group-item" *ngIf="!item.isDeleted || header === 'удаленные'" >
                 <div class="row">
                     <div class="col-3">{{item.name}}</div>
                     <div class="col-6">{{item.url}}</div>
