Добавлено удаление из удаленных и любимых

--- a/src/app/emoji-table/emoji-table.component.html
+++ b/src/app/emoji-table/emoji-table.component.html
@@ -28,7 +28,7 @@
     <div class="overflow-auto">
         <div *ngFor="let item of emojis; index as i">
             
-            <div class="list-group-item-action list-group-item" *ngIf="!item.isDeleted || header === 'удаленные'" >
+            <div class="list-group-item-action list-group-item" *ngIf="!item.isDeleted || (header === 'удаленные' && item.isDeleted)" >
                 <div class="row">
                     <div class="col-3">{{item.name}}</div>
                     <div class="col-6">{{item.url}}</div>
