Добавлен прелоадер в таблице

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
                     [itemsPerPage]="itemsPerPage"
                     [collectionSize]="collectionSize"
                     [emojis]="emojis"
+                    [loading]="loading"
                     (newItemEvent)="loadPage($event)"
                     (favItemEvent)="fav($event)"
                     (delItemEvent)="del($event)"
