--- a/src/app/emoji-table/emoji-table.component.html
+++ b/src/app/emoji-table/emoji-table.component.html
@@ -25,6 +25,12 @@
             </div>
         </div>
     </div>
+
+
+    <div *ngIf="loading" class="spinner-border text-primary m-auto" role="status">
+        <span class="sr-only">Loading...</span>
+    </div>
+
     <div class="overflow-auto">
         <div *ngFor="let item of emojis; index as i">
             
