Реализован поиск по имени emoji

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
                     (newItemEvent)="loadPage($event)"
                     (favItemEvent)="fav($event)"
                     (delItemEvent)="del($event)"
-                    
+                    (searchItemEvent)="searchItem($event)"
                     ></app-emoji-table>
   </div>
 </div>
