изменена кнопка поиска

--- a/src/app/emoji-table/emoji-table.component.html
+++ b/src/app/emoji-table/emoji-table.component.html
@@ -6,11 +6,11 @@
             </div>
             <div class="col-4">
                 <div class="row">
-                    <div class="col-8">
-                        <input  class="col-1 form-control form-control " type="text" placeholder="искать..." #searchName>
+                    <div class="col-8 m-0 p-0">
+                        <input  class="form-control form-control " type="text" placeholder="искать..." #searchName>
                     </div>
-                    <div class="col-2">
-                        <button class="col-2 btn btn-primary" type="button" (click)="search(searchName.value)">Поиск</button>
+                    <div class="col-2 m-0 p-0">                        
+                        <button class="btn btn-light" type="button" (click)="search(searchName.value)">Поиск</button>
                     </div>
                 </div>                
             </div>
