--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <div class="sidebar">
-    <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark sidebar" style="width: 200px;">
+    <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark sidebar">
         <hr>
         <ul class="nav nav-pills flex-column mb-auto">
             <li class="nav-item " *ngFor="let category of categories; index as i " (click)="showCategory(i)">
