исправлен выбор страницы

--- a/src/app/emoji-table/emoji-table.component.html
+++ b/src/app/emoji-table/emoji-table.component.html
@@ -80,7 +80,7 @@
         
     </div>
 
-    <ngb-pagination size="lg" class="d-flex justify-content-center" (pageChange)="onPageChanged($event)" [pageSize]="itemsPerPage"  [collectionSize]="collectionSize" [(page)]="page" [maxSize]="5" [rotate]="true" [boundaryLinks]="true">
+    <ngb-pagination size="lg" class="d-flex justify-content-center" (pageChange)="onPageChanged($event)" [pageSize]="itemsPerPage"  [collectionSize]="collectionSize" [(page)]="pageNumber" [maxSize]="5" [rotate]="true" [boundaryLinks]="true">
         
     </ngb-pagination>
 </div>
