--- a/src/app/emoji-table/emoji-table.component.html
+++ b/src/app/emoji-table/emoji-table.component.html
@@ -46,6 +46,15 @@
                     <div class="col-3">{{item.name}}</div>
                     <div class="col-6">{{item.url}}</div>
                     <div class="col-1"><img [src]="item.url" alt="" class="emojiImg"></div>
+
+
+                    <div class="col-2 m-0 p-0" *ngIf="header ==='удаленные'">                        
+                        <button class="btn btn-primary" type="button" (click)="delete(item)">восстановить</button>
+                    </div>
+
+                    <div class="col-2 row" *ngIf="header !=='удаленные'">                        
+                        
+                    
                     <div class="icon col-1" (click)="makeFavorite(item)">
                         <svg 
                         *ngIf="!item.isFavorite" 
@@ -74,6 +83,7 @@
                                 d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z" />
                         </svg>
                     </div>
+                </div>
                 </div>
             </div>
         </div>
