--- a/src/app/emoji-table/emoji-table.component.css
+++ b/src/app/emoji-table/emoji-table.component.css
@@ -2,6 +2,7 @@
     background: white;
     width: 25px;
     height: 25px;
+    transition: all 2s linear;
 }
 
 .emojiImg:hover{
@@ -19,7 +20,6 @@
     position: absolute;
     display: block;
 }
-
 
 .emojiTable{
     max-height: 100vh;
